--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -10,7 +10,7 @@
   a {
     flex: 1;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0;
     text-decoration: none;
 
     &:hover {
